--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  Layout = "_Layout";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
+  <h1>Home Page</h1>
+  <p>Welcome Claire!Y Your personal busniess to managing all your stylists and their clients!</p>
 </div>
