--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -1,15 +1,19 @@
 @model HairSalon.Models.Client
 
-<h2>Create Client</h2>
+@{
+    ViewData["Title"] = "Add New Client";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Create">
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label">Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="StylistId" class="control-label"></label>
+        <label asp-for="StylistId" class="control-label">Stylist</label>
         <select asp-for="StylistId" class="form-control" asp-items="ViewBag.StylistId"></select>
     </div>
     <div class="form-group">
