--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -1,11 +1,15 @@
 @model HairSalon.Models.Client
 
-<h2>Edit Client</h2>
+@{
+    ViewData["Title"] = "Edit Client";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Edit">
     <input type="hidden" asp-for="ClientId" />
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label">Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
