--- a/HairSalon/Views/Stylist/Create.cshtml
+++ b/HairSalon/Views/Stylist/Create.cshtml
@@ -1,15 +1,19 @@
 @model HairSalon.Models.Stylist
 
-<h2>Add a New Stylist</h2>
+@{
+    ViewData["Title"] = "Add New Stylist";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Create">
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label">Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Specialty" class="control-label"></label>
+        <label asp-for="Specialty" class="control-label">Specialty</label>
         <input asp-for="Specialty" class="form-control" />
         <span asp-validation-for="Specialty" class="text-danger"></span>
     </div>
