--- a/HairSalon/Views/Stylist/Delete.cshtml
+++ b/HairSalon/Views/Stylist/Delete.cshtml
@@ -1,29 +1,16 @@
 @model HairSalon.Models.Stylist
 
-<h2>Delete Stylist</h2>
+@{
+    ViewData["Title"] = "Delete Stylist";
+}
 
-<h3>Are you sure you want to delete this?</h3>
+<h2>@ViewData["Title"]</h2>
+
+<h3>Are you sure you want to delete @Model.Name?</h3>
 <div>
-    <h4>Stylist</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Specialty)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Specialty)
-        </dd>
-    </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="StylistId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Cancel</a>
     </form>
 </div>
