--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -1,26 +1,23 @@
 @model HairSalon.Models.Stylist
 
-<h2>Stylist Details</h2>
+@{
+    ViewData["Title"] = "Stylist Details";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <div>
-    <h4>Stylist</h4>
-    <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Specialty)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Specialty)
-        </dd>
+        <dt>Name</dt>
+        <dd>@Model.Name</dd>
+
+        <dt>Specialty</dt>
+        <dd>@Model.Specialty</dd>
     </dl>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.StylistId">Edit</a> |
+    <a asp-action="Delete" asp-route-id="@Model.StylistId">Delete</a> |
     <a asp-action="Index">Back to List</a>
 </div>
