--- a/HairSalon/Views/Stylist/Edit.cshtml
+++ b/HairSalon/Views/Stylist/Edit.cshtml
@@ -1,16 +1,20 @@
 @model HairSalon.Models.Stylist
 
-<h2>Edit Stylist</h2>
+@{
+    ViewData["Title"] = "Edit Stylist";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Edit">
     <input type="hidden" asp-for="StylistId" />
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label">Name</label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="Specialty" class="control-label"></label>
+        <label asp-for="Specialty" class="control-label">Specialty</label>
         <input asp-for="Specialty" class="form-control" />
         <span asp-validation-for="Specialty" class="text-danger"></span>
     </div>
@@ -18,6 +22,7 @@
         <input type="submit" value="Save" class="btn btn-primary" />
     </div>
 </form>
+
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
