--- a/HairSalon/Views/Stylist/Index.cshtml
+++ b/HairSalon/Views/Stylist/Index.cshtml
@@ -1,37 +1,34 @@
 @model IEnumerable<HairSalon.Models.Stylist>
 
-<h2>Stylists</h2>
+@{
+    ViewData["Title"] = "Registered Stylists";
+}
+
+<h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Add New Stylist</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Specialty)
-            </th>
-            <th></th>
+            <th>Name</th>
+            <th>Specialty</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var stylist in Model)
+    {
         <tr>
+            <td>@stylist.Name</td>
+            <td>@stylist.Specialty</td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Specialty)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.StylistId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.StylistId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.StylistId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@stylist.StylistId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@stylist.StylistId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@stylist.StylistId">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
