--- a/HairSalon/Views/Stylist/Details.cshtml
+++ b/HairSalon/Views/Stylist/Details.cshtml
@@ -1,23 +1,30 @@
 @model HairSalon.Models.Stylist
 
 @{
-    ViewData["Title"] = "Stylist Details";
+    ViewData["Title"] = $"{Model.Name}'s Details";
 }
 
 <h2>@ViewData["Title"]</h2>
 
-<div>
-    <dl class="dl-horizontal">
-        <dt>Name</dt>
-        <dd>@Model.Name</dd>
+<dl class="row">
+    <dt class="col-sm-2">Name:</dt>
+    <dd class="col-sm-10">@Model.Name</dd>
 
-        <dt>Specialty</dt>
-        <dd>@Model.Specialty</dd>
-    </dl>
-</div>
+    <dt class="col-sm-2">Specialty:</dt>
+    <dd class="col-sm-10">@Model.Specialty</dd>
+</dl>
 
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.StylistId">Edit</a> |
-    <a asp-action="Delete" asp-route-id="@Model.StylistId">Delete</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<h3>Clients</h3>
+@if (Model.Clients.Any())
+{
+    <ul>
+        @foreach (var client in Model.Clients)
+        {
+            <li>@client.Name</li>
+        }
+    </ul>
+}
+else
+{
+    <p>This stylist has no clients yet.</p>
+}
