--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -1,34 +1,26 @@
-@model IEnumerable<HairSalon.Models.Client>
-
 @{
-    ViewData["Title"] = "Registered Clients";
+  Layout = "_Layout";
 }
 
-<h2>@ViewData["Title"]</h2>
+@using HairSalon.Models;
+@model List<HairSalon.Models.Client>;
 
-<p>
-    <a asp-action="Create">Add New Client</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Stylist</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var client in Model)
+<div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
+  <h1>Registered Clients</h1>
+  <p>A list of all clients in the database.</p>
+  <p>@Html.ActionLink("Add a client", "Create")</p>
+  <hr/>
+  @if (@Model.Count == 0)
+  {
+    <h5>No clients have been added yet.</h5>
+  } 
+  else 
+  {
+    <ul>
+    @foreach (Client entry in Model)
     {
-        <tr>
-            <td>@client.Name</td>
-            <td>@client.Stylist.Name</td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@client.ClientId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@client.ClientId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@client.ClientId">Delete</a>
-            </td>
-        </tr>
+      <li>@Html.ActionLink($"{entry.Name}", "Details", new {id = entry.ClientId}) | @entry.Stylist.Name</li>
     }
-    </tbody>
-</table>
+    </ul>
+  }
+</div>
