--- a/HairSalon/Views/Clients/Details.cshtml
+++ b/HairSalon/Views/Clients/Details.cshtml
@@ -6,7 +6,7 @@
 
 <div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
   <h1>Client Details</h1>
-  <p>Details for the selected client.</p>
+  <p>Details of the amazing client.</p>
   <p>@Html.ActionLink("Edit Client", "Edit", new {id = Model.ClientId}) | @Html.ActionLink("Delete Client", "Delete", new { id = Model.ClientId})</p>
   <hr/>
   <h3><strong>@Html.DisplayNameFor(model => model.Name)</strong>: @Html.DisplayFor(model => model.Name)</h3>
