--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
   <h1>Home Page</h1>
-  <p>Welcome Claire!Y Your personal busniess to managing all your stylists and their clients!</p>
+  <p>Welcome Claire!Your personal busniess to managing all your stylists and their clients!</p>
 </div>
