--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Eau Claire's Salon</title>
-    <link rel="stylesheet" href="~/css/bootstrap.min.css">
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="../../wwwroot/css/site.css">
   </head>
   <body>
     <div class="container">
