--- a/HairSalon/Views/Shared/LinkBar.cshtml
+++ b/HairSalon/Views/Shared/LinkBar.cshtml
@@ -6,13 +6,31 @@
         <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
           <li class="w-100">
             @Html.ActionLink("Home", "Index", "Home")
-          </li>          
+          </li>
           <li class="w-100">
             @Html.ActionLink("View all clients", "Index", "Clients")
           </li>
           <li class="w-100">
             @Html.ActionLink("See all stylists", "Index", "Stylists")
           </li>
+          <!-- Insert Authentication Links Here -->
+          @if (User.Identity.IsAuthenticated)
+          {
+              <li class="nav-item">
+                  <form asp-controller="Accounts" asp-action="LogOff" method="post" class="form-inline">
+                      <button type="submit" class="btn btn-link text-white text-decoration-none">Log Off</button>
+                  </form>
+              </li>
+          }
+          else
+          {
+              <li class="nav-item">
+                  <a class="nav-link text-white text-decoration-none" asp-controller="Accounts" asp-action="Register">Register</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link text-white text-decoration-none" asp-controller="Accounts" asp-action="Login">Login</a>
+              </li>
+          }
         </ul>
       </li>
     </ul>
