fix systxas and how it works together and how it interacts with app

--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Eau Claire's Salon</title>
-    <link rel="stylesheet" href="../../wwwroot/css/site.css">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
   </head>
   <body>
     <div class="container">
