--- a/HairSalon/Views/Accounts/Index.cshtml
+++ b/HairSalon/Views/Accounts/Index.cshtml
@@ -1,12 +1,9 @@
-﻿@{
+@{
   Layout = "_Layout";
 }
 
-<div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
-  <h1>Home Page</h1>
-  <p>Welcome Claire! Your personal busniess to managing all your stylists and their clients!</p>
-
-   @if (User.Identity.IsAuthenticated)
+<div class="main-display">
+  @if (User.Identity.IsAuthenticated)
   {
     <p>Hello @User.Identity.Name!</p>
     @using (Html.BeginForm("LogOff", "Account"))
@@ -19,5 +16,4 @@
     <p>@Html.ActionLink("Register", "Register")</p>
     <p>@Html.ActionLink("Log in", "Login")</p>
   }
-  
 </div>
