--- a/HairSalon/Views/Accounts/Register.cshtml
+++ b/HairSalon/Views/Accounts/Register.cshtml
@@ -1,28 +1,30 @@
 @model HairSalon.ViewModels.RegisterViewModel
+@using HairSalon.ViewModels
 
 @{
     Layout = "_Layout";
 }
 
-<h2>Register</h2>
-<form asp-action="Register">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="control-label"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password" class="control-label"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="control-label"></label>
-        <input asp-for="ConfirmPassword" class="form-control" />
-        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Register" class="btn btn-primary" />
-    </div>
-</form>
+<div class="main-display">
+  @if(!ViewData.ModelState.IsValid) 
+  {
+    @Html.ValidationSummary("Please fix the following error(s) and then resubmit the form:",  new { @class = "text-danger", @style = "font-weight: 600;"}) 
+  }
+
+  @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+  {
+    @Html.LabelFor(user => user.Email)
+    @Html.TextBoxFor(user => user.Email)
+    <br/>
+    @Html.LabelFor(user => user.Password)
+    @Html.EditorFor(user => user.Password)
+    <br/>
+    @Html.LabelFor(user => user.ConfirmPassword)
+    @Html.EditorFor(user => user.ConfirmPassword)
+    <br/>
+
+    <input type="submit" value="Register" />
+  }
+</div>
+<hr/>
+<p>@Html.ActionLink("Back to accounts page", "Index")</p>
