--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
   }
   else
   {
-    <p>@Html.ActionLink("Register", "Register")</p>
-    <p>@Html.ActionLink("Log in", "Login")</p>
+    <p>@Html.ActionLink("Register", "Register", "Accounts")</p>
+    <p>@Html.ActionLink("Log in", "Login", "Accounts")</p>
   }
   
 </div>
