--- a/HairSalon/Views/Accounts/Register.cshtml
+++ b/HairSalon/Views/Accounts/Register.cshtml
@@ -11,7 +11,7 @@
     @Html.ValidationSummary("Please fix the following error(s) and then resubmit the form:",  new { @class = "text-danger", @style = "font-weight: 600;"}) 
   }
 
-  @using (Html.BeginForm("Register", "Account", FormMethod.Post))
+  @using (Html.BeginForm("Register", "Accounts", FormMethod.Post))
   {
     @Html.LabelFor(user => user.Email)
     @Html.TextBoxFor(user => user.Email)
