add new asestic button if i were to build on thtis

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -2,6 +2,14 @@
   Layout = "_Layout";
 }
 
+<div class="hero-section" style="background-image: url('../../wwwroot/css/1cfcf6c0af4f10209f1f95622a32b24d.jpg');">
+    <div class="hero-text">
+        <h1>Welcome to Eau Claire's Salon</h1>
+        <p>Discover your new look with us today!</p>
+        <a href="#services" class="btn btn-primary">Explore Services</a>
+    </div>
+</div>
+
 <div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
   <h1>Home Page</h1>
   <p>Welcome Claire! Your personal busniess to managing all your stylists and their clients!</p>
