--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     </div>
 </div>
 
-<div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
+<div class="col py-2 col-xl-10 px-sm-2 px-0 move-up" id="main-display">
   <h1>Home Page</h1>
   <p>Welcome Claire! Your personal busniess to managing all your stylists and their clients!</p>
 
