change background again and title color and more bolded letter:

--- a/HairSalon/Views/Shared/Header.cshtml
+++ b/HairSalon/Views/Shared/Header.cshtml
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1 class="display-4">Eau Claire's Salon</h1>
+  <h1 class="display-4">*Business Name* Salon</h1>
   <p class="lead">Unwavering beauty</p>
   <hr class="my-4">
 </div>
