--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Eau Claire's Salon</title>
+    <title>*Business Name* Salon</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true">
     <!-- Include Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="text-white">Eau Claire's Salon</h1>
+            <h1 class="text-white">*Business Name* Salon</h1>
         </div>
     </header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -38,7 +38,7 @@
         @RenderBody()
     </div>
     <footer class="footer bg-dark text-white text-center">
-        <p class="mb-0">© 2024 Eau Claire's Salon</p>
+        <p class="mb-0">© 2024 *Business Name* Salon</p>
     </footer>
     <!-- Include Bootstrap JS and jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
