--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -6,13 +6,13 @@
 @model List<HairSalon.Models.Client>;
 
 <div class="col py-2 col-xl-10 px-sm-2 px-0" id="main-display">
-  <h1>Registered Clients</h1>
-  <p>A list of all clients in the database.</p>
+  <h1 class=".white-text">Registered Clients</h1>
+  <p class=".white-text">A list of all clients in the database.</p>
   <p>@Html.ActionLink("Add a client", "Create")</p>
   <hr/>
   @if (@Model.Count == 0)
   {
-    <h5>No clients have been added yet.</h5>
+    <h5 class=".white-text">No clients have been added yet.</h5>
   } 
   else 
   {
